<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="info.mindland.theoneandonly.MasterActivity" >

    <EditText
        android:id="@+id/websitename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="86dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/blank" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/entersite"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/yourpw"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/generatedPw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hint"
        android:layout_centerHorizontal="true"
        android:clickable="false"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/pwNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/websitename"
        android:layout_below="@+id/websitename"
        android:layout_marginTop="14dp"
        android:layout_toRightOf="@+id/textView3"
        android:ems="10"
        android:inputType="number"
        android:text="@string/one" />

    <Button
        android:id="@+id/showPw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/copy"
        android:layout_alignBottom="@+id/copy"
        android:layout_toLeftOf="@+id/textView1"
        android:text="@string/showPw" />

    <Button
        android:id="@+id/copy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/generatedPw"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:text="@string/copyclip" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/pwNumber"
        android:layout_alignBottom="@+id/pwNumber"
        android:layout_alignLeft="@+id/generatedPw"
        android:text="@string/thisispwnumber"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/store"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/showPw"
        android:layout_below="@+id/showPw"
        android:layout_marginTop="16dp"
        android:text="@string/store" />

</RelativeLayout>