<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="info.mindland.theoneandonly.MasterActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/passplease" />

    <EditText
        android:id="@+id/websitename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/historyList"
        android:layout_alignRight="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="37dp"
        android:ems="10"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <ListView
        android:id="@+id/historyList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/invaderdescription" >

    </ListView>

    <Button
        android:id="@+id/showPw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/websitename"
        android:layout_alignBottom="@+id/websitename"
        android:layout_alignRight="@+id/historyList"
        android:text="@string/ok" />

    <info.mindland.theoneandonly.SpaceInvader
        android:id="@+id/spaceInvader1"
        android:layout_width="60pt"
        android:layout_height="60pt"
        android:layout_below="@+id/showPw" />

    <TextView
        android:id="@+id/invaderdescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/showPw"
        android:layout_marginLeft="14dp"
        android:layout_toLeftOf="@+id/showPw"
        android:layout_toRightOf="@+id/spaceInvader1"
        android:text="@string/invaderdescription" />

    <TextView
        android:id="@+id/hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/websitename"
        android:layout_below="@+id/textView1"
        android:text="@string/blank" />

</RelativeLayout>